--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+@keyframes fadeForm {
+  0%{
+    opacity: 0;
+    transform: scale(0.6);
+  }100%{
+    opacity: 1;
+    transform: scale(1);
+  }
+}
 #app {
   max-width: 1200px;
   margin:0 auto;
@@ -5,6 +14,9 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+}
+#app aside {
+  animation: fadeForm 300ms linear;
 }
 #app main {
   margin-left:30px;
@@ -20,4 +32,24 @@
   #app aside {
     width:100%;
   }
+}
+@keyframes loadingText {
+  0%, 100%{
+    transform: translateY(-10px);
+  }50%{
+    transform: translateY(0);
+  }
+}
+.loadText {
+  font-size:30px;
+  color: #7d40e7;
+  display:flex;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  justify-content: center;
+  align-items: center;
+  animation: loadingText 1s infinite;
 }
